--- a/build.properties
+++ b/build.properties
@@ -5,3 +5,6 @@ src.dir=.
 build.dir=build
 build.classes.dir=build/classes
 build.jar=lib/lkc.jar
+
+src.jj.file=./src/main/parser/Parser.jj
+build.parser.dir=./src/main/parser
